Fixed some elements not scaling properly on mobile.

--- a/css/otherPages.css
+++ b/css/otherPages.css
@@ -31,9 +31,11 @@ html, body
 }
 
 .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 #footerMobile, #footerDesktop
